tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_struct_pattern_errors_if_type_mismatch/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Cannot assign an expression of type Foo<i32> to a value of type Foo<Field>
  ┌─ src/main.nr:8:13
  │
8 │         let Foo::<i32> { x } = Foo { x: value };
  │             ----------------
  │

Aborting due to 1 previous error
