tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_struct_pattern_errors_if_type_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot assign an expression of type Foo<i32> to a value of type Foo<Field>
  ┌─ src/main.nr:8:13
  │
8 │         let Foo::<i32> { x } = Foo { x: value };
  │             ----------------
  │

Aborting due to 1 previous error
